--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,25 @@
 {
     "imports": {
         "@concepts/": "./src/concepts/",
+        "@concepts": "./src/concepts/concepts.ts",
+        "@test-concepts": "./src/concepts/test_concepts.ts",
         "@utils/": "./src/utils/",
+        "@engine": "./src/engine/mod.ts",
         "@google/generative-ai": "npm:@google/generative-ai@^0.11.4",
         "@std/assert": "https://deno.land/std@0.224.0/assert/mod.ts",
         "mongodb": "npm:mongodb@^6.9.0"
     },
     "tasks": {
-        "concepts": "deno run --allow-net --allow-read --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api"
+        "start": "deno run --allow-net --allow-write --allow-read --allow-sys --allow-env src/main.ts",
+        "concepts": "deno run --allow-net --allow-read --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api",
+        "import": "deno run --allow-read --allow-write --allow-env src/utils/generate_imports.ts"
+    },
+    "lint": {
+        "rules": {
+            "exclude": [
+                "no-import-prefix",
+                "no-unversioned-import"
+            ]
+        }
     }
 }
