--- a/deno.json
+++ b/deno.json
@@ -1,18 +1,24 @@
 {
     "imports": {
         "@concepts/": "./src/concepts/",
-        "@concepts": "./src/concepts/concepts.ts",
+        "concepts": "deno run --allow-net --allow-read --allow-write --allow-sys --allow-env concept_server.ts --port 8000 --baseUrl /api",
         "@test-concepts": "./src/concepts/test_concepts.ts",
         "@utils/": "./src/utils/",
         "@engine": "./src/engine/mod.ts",
         "@google/generative-ai": "npm:@google/generative-ai@^0.11.4",
         "@std/assert": "https://deno.land/std@0.224.0/assert/mod.ts",
-        "mongodb": "npm:mongodb@^6.9.0"
+        "mongodb": "npm:mongodb@^6.9.0",
+        "std/dotenv": "https://deno.land/std@0.224.0/dotenv/mod.ts",
+        "npm:mongodb": "npm:mongodb@^6.3.0",
+        "@std/path": "jsr:@std/path@^1.0.0",
+        "@std/fs": "jsr:@std/fs@^1.0.0",
+        "@std/cli": "jsr:@std/cli@^1.0.0"
     },
     "tasks": {
         "start": "deno run --allow-net --allow-write --allow-read --allow-sys --allow-env src/main.ts",
-        "concepts": "deno run --allow-net --allow-read --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api",
-        "import": "deno run --allow-read --allow-write --allow-env src/utils/generate_imports.ts"
+        "import": "deno run --allow-read --allow-write --allow-env src/utils/generate_imports.ts",
+        "concepts": "deno run --allow-net --allow-read --allow-write --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api",
+        "test": "deno test -A --no-check --env"
     },
     "lint": {
         "rules": {
