--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,11 @@
 {
     "imports": {
         "@concepts/": "./src/concepts/",
-        "concepts": "deno run --allow-net --allow-read --allow-write --allow-sys --allow-env concept_server.ts --port 8000 --baseUrl /api",
+        "@concepts": "./src/concepts/concepts.ts",
         "@test-concepts": "./src/concepts/test_concepts.ts",
         "@utils/": "./src/utils/",
         "@engine": "./src/engine/mod.ts",
+        "@syncs": "./src/syncs/syncs.ts",
         "@google/generative-ai": "npm:@google/generative-ai@^0.11.4",
         "@std/assert": "https://deno.land/std@0.224.0/assert/mod.ts",
         "mongodb": "npm:mongodb@^6.9.0",
@@ -18,7 +19,8 @@
         "start": "deno run --allow-net --allow-write --allow-read --allow-sys --allow-env src/main.ts",
         "import": "deno run --allow-read --allow-write --allow-env src/utils/generate_imports.ts",
         "concepts": "deno run --allow-net --allow-read --allow-write --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api",
-        "test": "deno test -A --no-check --env"
+        "test": "deno test -A --no-check --env",
+        "build": "deno run import"
     },
     "lint": {
         "rules": {
